<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context ="com.example.kotlintrivia.categories.CategoryFragment">

    <data>

        <variable
            name="categoryViewModel"
            type="com.example.kotlintrivia.categories.CategoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/category_selection_tv"
            style="@style/MainTextStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/category_selection_txt"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/dummy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@{categoryViewModel.navigateToSelectedProperty.toString()}"
            android:textSize="10sp" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/category1_btn"
            android:text="@string/category1_txt"
            style="@style/CategoryButtonStyles"
            android:onClick="@{()-> categoryViewModel.displayKnowledge()}"
            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/category2_btn"
            android:text="@string/category2_txt"
            style="@style/CategoryButtonStyles"
            android:onClick="@{()->categoryViewModel.displayComputers()}"
            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/category3_btn"
            android:text="@string/category3_txt"
            style="@style/CategoryButtonStyles"
            android:onClick="@{()-> categoryViewModel.displayScience()}"

            />

    </LinearLayout>

</layout>