<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".score.ScoreFragment"
    >
    <data>
        <variable
            name="scoreViewModel"
            type="com.example.kotlintrivia.score.ScoreViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <androidx.cardview.widget.CardView
        android:id="@+id/questionCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/you_scored"
                android:id="@+id/scoreText"
                style="@style/MainTextStyles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="You Scored"
                android:textSize="20dp"
                android:layout_gravity="center"/>

        <TextView
           android:text="@{String.valueOf(scoreViewModel.score)}"
            android:id="@+id/scoreNum"
            style="@style/MainTextStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            tools:text="10"
            android:textSize="20dp"
            android:layout_gravity="center"/>

            <TextView
                android:text="Out of 10"
                style="@style/MainTextStyles"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Out of 10"
                android:textSize="15dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/test_again"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:onClick="@{() -> scoreViewModel.onTestAgain()}">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/black"
                android:text="@string/exit_app"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:onClick="@{()-> scoreViewModel.onExitApp()}">

            </com.google.android.material.button.MaterialButton>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>